# pyCADFingerprinting

./: AUTHORS  CMakeLists.txt  README.md  app.py  install_vir_env.sh  main.py  refreshrepo.sh  run_app.sh  setup.sh  setup2.sh
archive/: test_fingerprint.py
archive/detecting_planes/: build_planes.py
archive/src/Computer_Vision/: vector_transformation.py
archive/src/Computer_Vision/examples_of_image_processing/: harris_corner_detection.py  harris_corner_detection.py.save  lucas_kanade.py  shi_tomasi_corner_detection.py
archive/test/models/: test.dae  test.stl  test.x_t
correspondence_grouping-master/: .gitignore  CMakeLists.txt
correspondence_grouping-master/src/: correspGroup.cpp  correspGroup.h  doStuff.cpp
correspondence_grouping_lib/: CMakeLists.txt  setup.sh
correspondence_grouping_lib/src/: app.py  correspGroup.cpp  correspGroup.h  cython_compile.pyx  doStuff.cpp  setup.py
correspondence_grouping_lib/test/: app.py
detecting_planes/: build_planes.py  classes.py  making_test_stl.py  original2.stl  utility_funcs.py
pcl_sols/: CMakeLists.txt  correspGroup.cpp  test_class.cpp
pcl_sols/src/: CMakeLists.txt  correspGroup.h  correspondence_grouping.cpp
src/: correspGroup.cpp  correspondence_grouping.cpp  dumpjson.py  exec_test.py  parse_data.py  stl_to_pcd.py  test_corresp_group.py  test_executing_corresp_group.py
src/Computer_Vision/examples_of_image_processing/: canny_edge_detection.py  shi_tomasi_and_canny.py
src/correspGroup/: correspGroup.cpp  correspGroup.h  correspGroup.py  runCorrespGroup.cpp
src/mesh_folder/: mesh.pcd  model.stl
src/pythonCorrespGroup/: group.py
src/test/duncan_test/: cmd_test.py  parse_data_test.py
test/: Untitled.ipynb  brisk.py  flan.py  occtest.py  testing.md
test/duncan_test/: parse_data.py  script.sh  test_mesh.txt
test/models/: test.3dm  test.iges  test.sat  test.step
test/python-mesh/: dumpjson.py  mesh.txt  texttomesh.py
(+3 files in other folders)
